# DeepThought

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.antigravitycli/: 3bde5c66-26f6-4c7c-bd95-950f648fce93.json
.specify/memory/: constitution.md
benchmarks/: cmdinj_detector.py  conftest.py  crlf_detector.py  deep-thought-benchmark.md  deserial_detector.py  ldapinj_detector.py  learn.py  model_rediscovery_eval.py  nosql_detector.py  openredirect_detector.py  pathtrav_detector.py  pp_detector.py  rediscovery-corpus.md  sqli_detector.py  ssrf_detector.py  ssti_detector.py  tarfile_detector.py  teaching.py  test_cjson_issue_800.py  test_cmdinj.py  test_crlf.py  test_cve_2007_4559.py  test_deserialization.py  test_ldap_injection.py  test_nosql.py  test_open_redirect.py  test_path_traversal.py  test_prototype_pollution.py  test_sqli.py  test_ssrf.py  test_ssti.py  test_xxe.py  xxe_detector.py
benchmarks/corpus/: SIGNOFF-sandbox-tier.md
benchmarks/data/: README.md  generalization-log.json  model-rediscovery-eval.json
benchmarks/fixtures/: cmdinj_fixture.js  cmdinj_fixture.py  crlf.py  deserialization.java  deserialization.js  deserialization.py  ldap_injection.java  ldap_injection.php  ldap_injection.py  nosql.js  open_redirect.py  path_traversal.js  path_traversal.py  prototype_pollution.js  sqli.php  sqli.py  sqli.vm  ssrf.py  ssti.py  vulnerable_extract.py  xxe_fixture.java  xxe_fixture.py
bounty/: AUTHORIZATION.md  STRATEGY.md
docs/: BUILD-STATUS.md  DISCLOSURE-TEMPLATE.md  IMPROVEMENT-PROTOCOL.md  experiments.md  index.html  overview.md  phase-0-decisions.md  vuln-rediscovery-build-dispatch.md
memory/: AGENTS.md  README.md  mem.py
prompts/: codex-memory-smoke-test.md  codex-round3-20cve-broad-surface.md
scripts/: smoke.sh  smoke_002.sh  smoke_003.sh  smoke_004.sh  smoke_005.sh  smoke_006.sh  smoke_007.sh  smoke_008.sh  smoke_009.sh
tests/: conftest.py  test_002_hardening.py  test_advisory.py  test_check.py  test_cli.py  test_cli_002.py  test_cli_003.py  test_cli_004.py  test_cli_005.py  test_cli_007.py  test_cli_loop.py  test_conductor.py  test_csaf.py  test_cve.py  test_disclosure_session.py  test_discover_session.py  test_envelope.py  test_formats.py  test_gate.py  test_ledger.py  test_lifecycle.py  test_loop_budget.py  test_loop_driver.py  test_loop_policy.py  test_loop_schema.py  test_map_session.py  test_new_project.py  test_openvex.py  test_osv.py  test_sandbox.py  test_sandbox_signoff.py  test_sarif_ingest.py  test_schema_records.py  test_session_protocol.py  test_sibling_hunt.py  test_signature.py  test_smoke.py  test_smoke_003.py  test_smoke_004.py  test_status.py  (+2 more)
(+153 files in other folders)
