[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepthought"
version = "0.1.0"
description = "Deep Thought — the governed spine of an autonomous security-research platform (feature 001, the platform spine)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "MahdiHedhli" }]
keywords = ["security", "vulnerability", "osv", "spec-kit", "coordinated-disclosure"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jsonschema>=4.21",
    # Imported directly by the CSAF/CVE draft validators to resolve external
    # schema refs to local, hermetic stubs (no network). Ships transitively with
    # jsonschema>=4.18; declared here because we import it directly.
    "referencing>=0.30",
]

[project.optional-dependencies]
# tree-sitter drives the multi-language static detectors in benchmarks/ (the
# vuln-rediscovery skill build); the JS grammar is the first, more follow per class.
dev = ["pytest>=8.0", "tree-sitter>=0.23", "tree-sitter-javascript>=0.23", "tree-sitter-java>=0.23"]

[project.scripts]
deepthought = "deepthought.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/deepthought"]

# Ship the pinned standards schemas (non-.py files) inside the package.
artifacts = [
    "src/deepthought/export/osv_schema.json",
    "src/deepthought/export/csaf_schema.json",
    "src/deepthought/export/cve_schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
addopts = "-q"
pythonpath = ["src", "benchmarks"]
